# parkrun_survey_analysis

./: .gitignore  BACKEND_PLAN.md  PROGRESS.md  README.md  generate_mock_data.py  next.config.ts  package.json  render.yaml  requirements.txt  start-demo.ps1  tsconfig.json  vercel.json
.claude/: settings.json
app/: streamlit_app.py
backend/: .env.example  Procfile  README.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: jobs.py  surveys.py  wiki.py
backend/app/routers/: chat.py  datasets.py  ingest.py
backend/app/services/: classifier.py  clusterer.py  embedder.py  parser.py  query_agent.py  wiki_maintainer.py
backend/app/worker/: pipeline.py
backend/migrations/: 001_extensions.sql  002_core_tables.sql  003_cluster_tables.sql  004_wiki_tables.sql  005_job_queue.sql  006_indexes.sql  007_phase2_tables.sql  008_match_functions.sql  009_rls_policies.sql  010_relax_survey_type.sql  011_chat_sessions.sql
backend/scripts/: apply_migrations.py  cleanup_surveys.py  test_rpc.py
backend/tests/: conftest.py  test_api.py  test_classifier.py  test_parser.py
backend/wiki/: SCHEMA.md
config/: prompts.yaml  settings.yaml
docs/: llm_setup.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/lib/: utils.ts
frontend/services/: api.ts  chat.service.ts  datasets.service.ts  upload.service.ts
frontend/store/: chatStore.ts  (+2 more)
src/: __init__.py  analysis_engine.py  keyword_extraction.py  llm_interface.py  survey_parser.py
(+19 files in other folders)
